--- a/index.html
+++ b/index.html
@@ -26,11 +26,17 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link 
-      href="https://fonts.googleapis.com/css2?family=Inria+Serif:wght@300;400;700&family=MuseoModerno:wght@100..900&display=swap" 
+      href="https://fonts.googleapis.com/css2?family=Inria+Serif:wght@300;400;700&family=MuseoModerno:wght@100..900&family=Inter:wght@200;300;400&display=swap" 
+      rel="stylesheet">
+    
+    <!-- Titles: Instrument Serif -->
+    <link 
+      href="https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@0;1&display=swap" 
       rel="stylesheet">
     
     <!-- Preload Fonts -->
-    <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Inria+Serif:wght@300;400;700&family=MuseoModerno:wght@100..900&display=swap">
+    <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Inria+Serif:wght@300;400;700&family=MuseoModerno:wght@100..900&family=Inter:wght@200;300;400&display=swap">
+    <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@0;1&display=swap">
   
     <!-- Google Search Console -->
 
