--- a/index.html
+++ b/index.html
@@ -29,8 +29,14 @@
       href="https://fonts.googleapis.com/css2?family=Inria+Serif:wght@300;400;700&family=MuseoModerno:wght@100..900&display=swap" 
       rel="stylesheet">
     
+    <!-- Titles: Instrument Serif -->
+    <link 
+      href="https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@0;1&display=swap" 
+      rel="stylesheet">
+    
     <!-- Preload Fonts -->
     <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Inria+Serif:wght@300;400;700&family=MuseoModerno:wght@100..900&display=swap">
+    <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@0;1&display=swap">
   
     <!-- Google Search Console -->
 
