--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta name="robots" content="index, follow">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/x-icon" href="/icon.ico" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 
   <!-- Canonical -->
   <link rel="canonical" href="https://ivanlevyportfolio.vercel.app">
