Update content, SEO, and apply glassmorphism to cards

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Inria+Serif:wght@300;400;700&family=MuseoModerno:wght@100..900&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Inria+Serif:wght@300;400;700&family=MuseoModerno:wght@100..900&family=Inter:wght@300;400;500;600&display=swap"
     rel="stylesheet">
 
   <!-- Titles: Instrument Serif -->
@@ -50,7 +50,7 @@
 
   <!-- Preload Fonts -->
   <link rel="preload" as="style"
-    href="https://fonts.googleapis.com/css2?family=Inria+Serif:wght@300;400;700&family=MuseoModerno:wght@100..900&display=swap">
+    href="https://fonts.googleapis.com/css2?family=Inria+Serif:wght@300;400;700&family=MuseoModerno:wght@100..900&family=Inter:wght@300;400;500;600&display=swap">
   <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@0;1&display=swap">
 
   <!-- Google Search Console -->
